--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,18 @@ Flask-PyMongo==2.3.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
+joblib==1.4.2
 MarkupSafe==2.1.5
+numpy==2.1.2
+pandas==2.2.3
 pymongo==4.10.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
 requests==2.32.3
+scikit-learn==1.5.2
+scipy==1.14.1
+six==1.16.0
+threadpoolctl==3.5.0
+tzdata==2024.2
 urllib3==2.2.3
 Werkzeug==3.0.4
