--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,25 @@ blinker==1.8.2
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
+contourpy==1.3.0
+cycler==0.12.1
 dnspython==2.6.1
 Flask==3.0.3
 Flask-PyMongo==2.3.0
+fonttools==4.54.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 joblib==1.4.2
+kiwisolver==1.4.7
 MarkupSafe==2.1.5
+matplotlib==3.9.2
 numpy==2.1.2
+packaging==24.1
 pandas==2.2.3
+pillow==11.0.0
 pymongo==4.10.1
+pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 requests==2.32.3
