--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 MONGO_ROOT_PASSWORD=dstairlines
+KEY_AS=1029af3b615d19eabb828a556e1a14b6
+KEY_VISUALCROSSING=2Q5Q5GC6BTZEBEPQQMALNRTBP
+KEY_VISUALCROSSING_2=P5EQ8RLEBUC7CZ9ZTN8WZG4AZ
+CLIENT_ID_LH=xba2dh7y2xqabeamx2t7zcssx
+CLIENT_SECRET_LH=drAEmGMT7B
