Maj pour containerisation OK

--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
+MONGO_ROOT_LOGIN=dstairlines
 MONGO_ROOT_PASSWORD=dstairlines
+FLASK_ADMIN_LOGIN=admin
+FLASK_ADMIN_PASSWORD=admin
+FLASK_USER_LOGIN=dstairlines
+FLASK_USER_PASSWORD=dstairlines
 KEY_AS=1029af3b615d19eabb828a556e1a14b6
 KEY_VISUALCROSSING=2Q5Q5GC6BTZEBEPQQMALNRTBP
 KEY_VISUALCROSSING_2=P5EQ8RLEBUC7CZ9ZTN8WZG4AZ
