maj gestion des erreurs, affichage de la prédiction GridSearch avec les formulaires

--- a/.env
+++ b/.env
@@ -5,7 +5,9 @@ FLASK_ADMIN_PASSWORD=admin
 FLASK_USER_LOGIN=dstairlines
 FLASK_USER_PASSWORD=dstairlines
 KEY_AS=1029af3b615d19eabb828a556e1a14b6
-KEY_VISUALCROSSING=2Q5Q5GC6BTZEBEPQQMALNRTBP
-KEY_VISUALCROSSING_2=P5EQ8RLEBUC7CZ9ZTN8WZG4AZ
+# KEY_VISUALCROSSING=2Q5Q5GC6BTZEBEPQQMALNRTBP
+# KEY_VISUALCROSSING_2=P5EQ8RLEBUC7CZ9ZTN8WZG4AZ
 CLIENT_ID_LH=xba2dh7y2xqabeamx2t7zcssx
 CLIENT_SECRET_LH=drAEmGMT7B
+KEY_VISUALCROSSING=KTXFYHL5QFZFAXWFJ5BRPWG6C
+KEY_VISUALCROSSING_2=W9NSD6SUADPMWHHEAZWSE5E9W
