--- a/.env
+++ b/.env
@@ -4,10 +4,21 @@ FLASK_ADMIN_LOGIN=admin
 FLASK_ADMIN_PASSWORD=admin
 FLASK_USER_LOGIN=dstairlines
 FLASK_USER_PASSWORD=dstairlines
+#Clés Guillaume :
 KEY_AS=1029af3b615d19eabb828a556e1a14b6
-# KEY_VISUALCROSSING=2Q5Q5GC6BTZEBEPQQMALNRTBP
-# KEY_VISUALCROSSING_2=P5EQ8RLEBUC7CZ9ZTN8WZG4AZ
+KEY_VISUALCROSSING=2Q5Q5GC6BTZEBEPQQMALNRTBP
+KEY_VISUALCROSSING_2=P5EQ8RLEBUC7CZ9ZTN8WZG4AZ
 CLIENT_ID_LH=xba2dh7y2xqabeamx2t7zcssx
 CLIENT_SECRET_LH=drAEmGMT7B
-KEY_VISUALCROSSING=KTXFYHL5QFZFAXWFJ5BRPWG6C
-KEY_VISUALCROSSING_2=W9NSD6SUADPMWHHEAZWSE5E9W
+# #Clés Lydie :
+# KEY_AS=c8af5305b9d8d3367e336086e9835e0a
+# KEY_VISUALCROSSING=RERF7RY267CY5754N8W2VZVKT
+# KEY_VISUALCROSSING_2=UQJNPFRG3MA24EA5PG4DFAR6L
+# CLIENT_ID_LH=kmcdkm9jsmhrpt4upa7t6tpzb
+# CLIENT_SECRET_LH=CwUc62danJ
+# #Clés Yoan :
+# KEY_AS=11cdd6f194badc16f64953a2fb383042
+# KEY_VISUALCROSSING=KTXFYHL5QFZFAXWFJ5BRPWG6C
+# KEY_VISUALCROSSING_2=W9NSD6SUADPMWHHEAZWSE5E9W
+# CLIENT_ID_LH=22642rjuu7z74utsdajwa8b9t
+# CLIENT_SECRET_LH=U57JwBbEKJ
