MAJ Séparation 2 containers flask

--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ FLASK_ADMIN_LOGIN=admin
 FLASK_ADMIN_PASSWORD=admin
 FLASK_USER_LOGIN=dstairlines
 FLASK_USER_PASSWORD=dstairlines
+FLASK_SECRET_KEY=cle_secrete_app_flask
+FLASK_SECRET_KEY_FORM=cle_secrete_app_flask_form
 #Clés Guillaume :
 KEY_AS=1029af3b615d19eabb828a556e1a14b6
 KEY_VISUALCROSSING=2Q5Q5GC6BTZEBEPQQMALNRTBP
