--- a/Dockerfile.app_form
+++ b/Dockerfile.app_form
@@ -15,18 +15,13 @@ RUN pip install --no-cache-dir --timeout=100 -r requirements.txt
 
 # Copie les répertoires spécifiques
 COPY functions /app/functions
-COPY scripts /app/scripts
+COPY scripts_form /app/scripts
+COPY templates_form /app/templates
 COPY static /app/static
-COPY templates /app/templates
 
 # Copie les fichiers spécifiques
 COPY init_db.py /app/init_db.py
-
-# Exécuter le script d'initialisation de la base de données
-# RUN python init_db.py
+COPY app_form.py /app/app.py
 
 # Exposer le port sur lequel l'application Flask sera exécutée
 EXPOSE 5000
-
-# Commande pour lancer l'application
-# CMD ["python", "app.py"]
