Ajout sécurisation par API_KEY pour la route /predict

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ FLASK_USER_LOGIN=dstairlines
 FLASK_USER_PASSWORD=dstairlines
 FLASK_SECRET_KEY=cle_secrete_app_flask
 FLASK_SECRET_KEY_FORM=cle_secrete_app_flask_form
+API_KEY=api_key_dstairlines
 #Clés Guillaume :
 KEY_AS=1029af3b615d19eabb828a556e1a14b6
 KEY_VISUALCROSSING=2Q5Q5GC6BTZEBEPQQMALNRTBP
