--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - FLASK_USER_LOGIN=${FLASK_USER_LOGIN}
       - FLASK_USER_PASSWORD=${FLASK_USER_PASSWORD}
       - FLASK_SECRET_KEY=${FLASK_SECRET_KEY}
+      - API_KEY=${API_KEY}
       - KEY_AS=${KEY_AS}
       - KEY_VISUALCROSSING=${KEY_VISUALCROSSING}
       - KEY_VISUALCROSSING_2=${KEY_VISUALCROSSING_2}
@@ -55,6 +56,7 @@ services:
       - FLASK_USER_LOGIN=${FLASK_USER_LOGIN}
       - FLASK_USER_PASSWORD=${FLASK_USER_PASSWORD}
       - FLASK_SECRET_KEY_FORM=${FLASK_SECRET_KEY_FORM}
+      - API_KEY=${API_KEY}
       - KEY_AS=${KEY_AS}
       - KEY_VISUALCROSSING=${KEY_VISUALCROSSING}
       - KEY_VISUALCROSSING_2=${KEY_VISUALCROSSING_2}
