Ajout API_KEY dans display_position sur flask_app_form

--- a/.env
+++ b/.env
@@ -6,19 +6,23 @@ FLASK_USER_LOGIN=dstairlines
 FLASK_USER_PASSWORD=dstairlines
 FLASK_SECRET_KEY=cle_secrete_app_flask
 FLASK_SECRET_KEY_FORM=cle_secrete_app_flask_form
+#Clé de notre API
 API_KEY=api_key_dstairlines
+#-----------------------------------------------
 #Clés Guillaume :
 KEY_AS=1029af3b615d19eabb828a556e1a14b6
 KEY_VISUALCROSSING=2Q5Q5GC6BTZEBEPQQMALNRTBP
 KEY_VISUALCROSSING_2=P5EQ8RLEBUC7CZ9ZTN8WZG4AZ
 CLIENT_ID_LH=xba2dh7y2xqabeamx2t7zcssx
 CLIENT_SECRET_LH=drAEmGMT7B
+#-----------------------------------------------
 # #Clés Lydie :
 # KEY_AS=c8af5305b9d8d3367e336086e9835e0a
 # KEY_VISUALCROSSING=RERF7RY267CY5754N8W2VZVKT
 # KEY_VISUALCROSSING_2=UQJNPFRG3MA24EA5PG4DFAR6L
 # CLIENT_ID_LH=kmcdkm9jsmhrpt4upa7t6tpzb
 # CLIENT_SECRET_LH=CwUc62danJ
+#-----------------------------------------------
 # #Clés Yoan :
 # KEY_AS=11cdd6f194badc16f64953a2fb383042
 # KEY_VISUALCROSSING=KTXFYHL5QFZFAXWFJ5BRPWG6C
