IMPORTANT Architecture 3 containers

--- a/Dockerfile.app_form
+++ b/Dockerfile.app_form
@@ -8,7 +8,7 @@ WORKDIR /app
 RUN pip install --upgrade pip
 
 # Copier le fichier requirements.txt pour installer les dépendances
-COPY requirements.txt .
+COPY /app_form/requirements.txt .
 
 # Installer les dépendances
 RUN pip install --no-cache-dir --timeout=100 -r requirements.txt
@@ -16,13 +16,13 @@ RUN pip install --no-cache-dir --timeout=100 -r requirements.txt
 # Copie les répertoires spécifiques
 COPY data_test /app/data_test
 COPY functions /app/functions
-COPY scripts_form /app/scripts
-COPY templates_form /app/templates
-COPY static /app/static
+COPY /app_form/scripts /app/scripts
+COPY /app_form/templates /app/templates
+COPY /app_form/static /app/static
 
 # Copie les fichiers spécifiques
 # COPY init_db.py /app/init_db.py
-COPY app_form.py /app/app.py
+COPY /app_form/app.py /app/app.py
 
 # Exposer le port sur lequel l'application Flask sera exécutée
 EXPOSE 5000
