--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,11 @@ services:
       dockerfile: Dockerfile.app
     container_name: dstair_flask_app
     ports:
-      - 5000:5000
+      - 5002:5000
     depends_on:
       - mongodb
+    volumes:
+      - ./model:/app/model  # Volume partagé avec l'hôte
     environment:
       - MONGO_URI=mongodb://${MONGO_ROOT_LOGIN}:${MONGO_ROOT_PASSWORD}@mongodb:27017/app_data?authSource=admin
       #?authSource=admin -> on précise que l'on s'authentifie sur la base admin, car mongo créer les utilisateurs dans admin par défaut
@@ -29,15 +31,7 @@ services:
       - FLASK_USER_PASSWORD=${FLASK_USER_PASSWORD}
       - FLASK_SECRET_KEY=${FLASK_SECRET_KEY}
       - API_KEY=${API_KEY}
-      - KEY_AS=${KEY_AS}
-      - KEY_VISUALCROSSING=${KEY_VISUALCROSSING}
-      - KEY_VISUALCROSSING_2=${KEY_VISUALCROSSING_2}
-      - CLIENT_ID_LH=${CLIENT_ID_LH}
-      - CLIENT_SECRET_LH=${CLIENT_SECRET_LH}
-    command: >
-      bash -c "
-      python init_db.py && 
-      python app.py"
+    command: python app.py
 
   flask_app_form:
     build:
@@ -63,3 +57,34 @@ services:
       - CLIENT_ID_LH=${CLIENT_ID_LH}
       - CLIENT_SECRET_LH=${CLIENT_SECRET_LH}
     command: python app.py
+
+  app_admin:
+    build:
+      context: .
+      dockerfile: Dockerfile.app_admin
+    container_name: dstair_app_admin
+    depends_on:
+      - mongodb
+    ports:
+      - "8888:8888"  # Port pour Jupyter Notebook
+      - "8050:8050"  # Port pour Dash
+      - "5000:5000"  # Port pour flask
+    volumes:
+      - ./app_admin/scripts:/app/scripts
+      - ./model:/app/model
+      - ./data_test:/app/data_test
+    environment:
+      - MONGO_URI=mongodb://${MONGO_ROOT_LOGIN}:${MONGO_ROOT_PASSWORD}@mongodb:27017/app_data?authSource=admin
+      #?authSource=admin -> on précise que l'on s'authentifie sur la base admin, car mongo créer les utilisateurs dans admin par défaut
+      - FLASK_ADMIN_LOGIN=${FLASK_ADMIN_LOGIN}
+      - FLASK_ADMIN_PASSWORD=${FLASK_ADMIN_PASSWORD}
+      - FLASK_USER_LOGIN=${FLASK_USER_LOGIN}
+      - FLASK_USER_PASSWORD=${FLASK_USER_PASSWORD}
+      - FLASK_SECRET_KEY=${FLASK_SECRET_KEY}
+      - API_KEY=${API_KEY}
+      - KEY_AS=${KEY_AS}
+      - KEY_VISUALCROSSING=${KEY_VISUALCROSSING}
+      - KEY_VISUALCROSSING_2=${KEY_VISUALCROSSING_2}
+      - CLIENT_ID_LH=${CLIENT_ID_LH}
+      - CLIENT_SECRET_LH=${CLIENT_SECRET_LH}
+    command: ./start.sh
