--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,17 +51,17 @@ stages:
 #     - sudo apt-get update
 #     - pip install -r requirements.txt
 
-# .do_testing:
-#   services:
-#     - docker:dind
-#   before_script:
-#     - echo "======== before_script  start ========" # Débuggage
-#     - echo "DOCKER_USERNAME= $DOCKER_USERNAME" # Débuggage
-#     - echo "DOCKER_PASSWORD= $DOCKER_PASSWORD" # Débuggage
-#     - if [ -z "$DOCKER_USERNAME" ] || [ -z "$DOCKER_PASSWORD" ]; then echo "Docker credentials not set"; exit 1; fi
-#     - echo "Logging in to Docker..."
-#     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-#     - echo "======== before_script  end ========" 
+.do_testing:
+  services:
+    - docker:dind
+  before_script:
+    - echo "======== before_script  start ========" # Débuggage
+    - echo "DOCKER_USERNAME= $DOCKER_USERNAME" # Débuggage
+    - echo "DOCKER_PASSWORD= $DOCKER_PASSWORD" # Débuggage
+    - if [ -z "$DOCKER_USERNAME" ] || [ -z "$DOCKER_PASSWORD" ]; then echo "Docker credentials not set"; exit 1; fi
+    - echo "Logging in to Docker..."
+    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+    - echo "======== before_script  end ========" 
 
 # build-app:
 #   stage: build
