--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - 27017:27017
       
   flask_app:
-    image: guillaumegossmann/dst_airlines_app
+    image: guillaumegossmann/dst_airlines_app:latest
     container_name: dstair_flask_app
     ports:
       - 5002:5002
@@ -32,7 +32,7 @@ services:
     command: python app.py
 
   flask_app_form:
-    image: guillaumegossmann/dst_airlines_app_form
+    image: guillaumegossmann/dst_airlines_app_form:latest
     container_name: dstair_flask_app_form
     ports:
       - 5001:5001
@@ -55,7 +55,7 @@ services:
     command: python app.py
 
   app_admin:
-    image: guillaumegossmann/dst_airlines_app_admin
+    image: guillaumegossmann/dst_airlines_app_admin:latest
     container_name: dstair_app_admin
     depends_on:
       - mongodb
