--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - 27017:27017
       
   flask_app:
-    image: guillaumegossmann/dst_airlines_app:0af9b99f
+    image: docker.io/guillaumegossmann/dst_airlines_app:0af9b99f
     container_name: dstair_flask_app
     ports:
       - 5002:5002
