--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -114,7 +114,7 @@ stop-dev:
     name: $NAMESPACE-$CI_BUILD_REF_NAME
     action: stop
   script:
-    - docker-compose down -v
+    - docker-compose down
 
 deploy-dev:
   stage: deploy-dev
