--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       
   flask_app:
     image: guillaumegossmann/dst_airlines_app:latest
+    network_mode: host  # Ajout pour éviter l'isolement réseau
     container_name: dstair_flask_app
     ports:
       - 5002:5002
@@ -33,6 +34,7 @@ services:
 
   flask_app_form:
     image: guillaumegossmann/dst_airlines_app_form:latest
+    network_mode: host  # Ajout pour éviter l'isolement réseau
     container_name: dstair_flask_app_form
     ports:
       - 5001:5001
@@ -56,6 +58,7 @@ services:
 
   app_admin:
     image: guillaumegossmann/dst_airlines_app_admin:latest
+    network_mode: host  # Ajout pour éviter l'isolement réseau
     container_name: dstair_app_admin
     depends_on:
       - mongodb
