--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,10 +62,12 @@ test-app_form:
     - pip install -r requirements.txt
 
 .do_dind:
-  services:
-    - docker:dind
+  # services:
+  #   - docker:dind
 
 .do_docker_logging:
+  services:
+    - docker:dind
   before_script:
     - echo "======== before_script start ========" # Débuggage
     - echo "DOCKER_USERNAME= $DOCKER_USERNAME" # Débuggage
